--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
     build:
        runs-on: ubuntu-latest
        steps:
-       - uses: action/checkout@v2
+       - uses: actions/checkout@v2
        - name: Run-one line script
          run: echo Hello,world!
 
